dist/1.0/bin/sample/retrieveUnpackaged/objects/Case_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Path__c</fullName>
        <label>Attachment Path</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Attachments</relationshipLabel>
        <relationshipName>Case_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extranet_Url__c</fullName>
        <description>Url for Attachement in Extranet</description>
        <label>Extranet Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Attachment</label>
    <nameField>
        <displayFormat>CAT{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>